2009-06-24  Dominique Dumont  <domi.dumont@free.fr> v1.103

	* Build.PL: depends on Config::Model 0.637. Added build dependency
	on Log::Log4perl

	* lib/Config/Model/CursesUI.pm: changed built_in call to
	upstream_default

2009-01-05  Dominique Dumont  <dominique.dumont@hp.com> v1.102

	* lib/Config/Model/CursesUI.pm (layout_string_value): use
	TextEntry insted of TextEditor to edit integer value.

	* lib/Config/Model/CursesUI.pm (all): Remove dependency on
	Error (fix RT 42142)
	
2008-10-21  Dominique Dumont  <dominique.dumont@hp.com> v1.101

	* lib/Config/Model/CursesUI.pm: Added screen to edit ordered
	checklists  (requires Curses::UI 0.9606).

	* lib/Config/Model/CursesUI.pm: Bumped version number to match
	file and Perl distribution version number

2008-05-15  Dominique Dumont v1.007

	* lib/Config/Model/CursesUI.pm: adapted to change permission ->
	experience

2008-03-17  Dominique Dumont v1.006

	* lib/Config/Model/CursesUI.pm (start): adapted for Curses::UI
	0.9603 (changed call to main loop)

2008-02-29  Dominique Dumont v1.005

	* lib/Config/Model/CursesUI.pm: removed kludgy enum-integer value
	type (See Config::Model 0.619)

2007-10-24  Dominique Dumont v1.004 

	* lib/Config/Model/CursesUI.pm: bug fixes, interface cleanup,
	doc update, handle "uniline" value type
